# back-end/src/controllers/links/index.ts
@@ -3,6 +3,8 @@ import { Router } from "express";
 import linksGET from "./links-GET";
 import linksPOST from "./links-POST";
 import linksIdGET from "./links.id-GET";
+import linkIdVerifyPOST from "./links.id.verify-POST";
+import checkRedirect from "./redirect";
 
 import { wrapAsync } from "../../utils/wrapAync";
 import { checkJwt } from "../../middlewares/checkJwt";
@@ -14,6 +16,14 @@ router.post("/v0/links", checkJwt, wrapAsync(linksPOST));
 router.get("/v0/links", checkJwt, wrapAsync(linksGET));
 
 router.get("/v0/links/:id", checkJwt, wrapAsync(linksIdGET));
+
+router.post("/v0/links/:id/verify", wrapAsync(linkIdVerifyPOST));
+
+router.use("*", wrapAsync(checkRedirect));
+// router.get("/_sLFbQsSy", (req, res) => {
+//   console.log("All good");
+//   // res.status(200).end();
+// });
 
 //TODO
 // router.patch(
